feature: implement basic service, repository, and endpoints for product, size, category