@@ -2,11 +2,13 @@ package nashtech.rookie.uniform.configs;
 
 import nashtech.rookie.uniform.dtos.response.ApiResponse;
 import nashtech.rookie.uniform.exceptions.ApplicationException;
+import nashtech.rookie.uniform.utils.ResponseUtil;
 import org.springframework.context.support.DefaultMessageSourceResolvable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
 
@@ -14,20 +16,13 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @RestControllerAdvice
-public class ConfigExceptionHandler {
+public class ControllerAdvice {
 
     //Handle for custom exception
     @ExceptionHandler(ApplicationException.class)
     public ResponseEntity<ApiResponse<Void>> handle(ApplicationException e) {
-        ApiResponse<Void> res = ApiResponse.<Void>builder()
-                .message(e.getMessage())
-                .errorCode(e.getCode())
-                .success(false)
-                .data(null)
-                .build();
-        return new ResponseEntity<>(res, e.getStatus());
+        return new ResponseEntity<>(ResponseUtil.errorResponse(e.getCode(), e.getMessage()), e.getStatus());
     }
-
 
     //Handle for validation exception
     @ExceptionHandler(MethodArgumentNotValidException.class)
@@ -36,12 +31,8 @@ public class ConfigExceptionHandler {
         List<String> errorMessages = ex.getBindingResult().getAllErrors()
                 .stream()
                 .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                .collect(Collectors.toList());
+                .toList();
 
-        return ApiResponse.<List<String>>builder()
-                .message("Validation failed")
-                .success(false)
-                .data(errorMessages)
-                .build();
+        return ResponseUtil.errorResponse("Validation failed", errorMessages);
     }
 }
